--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css"> 
 </head>
 <body>
-    <h1>Juego: Número Secreto</h1>
+    <h1>Número Secreto</h1>
     <input type="number" id="guessInput" placeholder="Adivina un número del 1 al 10">
     <button id="guessButton">Probar</button>
     <p id="message"></p>
